--- a/src/main/resources/application-dev_docker.properties
+++ b/src/main/resources/application-dev_docker.properties
@@ -1,4 +1,5 @@
 db.driver=org.postgresql.Driver
 db.url=jdbc:postgresql://database:5432/courses_db_dev
+db.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 db.username=courses_app_dev
 db.password=courses_app_dev
