--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,7 @@
     </dependencies>
 
     <build>
+        <finalName>courses_app</finalName>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
