Working on tomcat deplyment

--- a/docker/dockercompose.yml
+++ b/docker/dockercompose.yml
@@ -4,7 +4,16 @@ services:
     build:
         context: ..
         dockerfile: docker/Dockerfile
+    networks:
+      - backend
     ports:
       - "8081:8080"
-      - "8005:8005"
     container_name: courses_auth_backend
+
+networks:
+  backend:
+    name: backend_network
+    external: true
+  default:
+    name: backend_network_default
+    driver: bridge
