--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+<!--            <exclusions>-->
+<!--                <exclusion>-->
+<!--                    <groupId>org.springframework.boot</groupId>-->
+<!--                    <artifactId>spring-boot-starter-tomcat</artifactId>-->
+<!--                </exclusion>-->
+<!--            </exclusions>-->
             <artifactId>spring-boot-configuration-processor</artifactId>
             <version>${springboot.version}</version>
             <optional>true</optional>
