--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build-tailwind": "npx tailwindcss -i ./src/main/resources/static/css/style.tailwind.css -o ./src/main/resources/static/css/main.css",
-    "build-tailwind-hotreload": "npx tailwindcss -i ./src/main/resources/static/css/style.tailwind.css -o ./src/main/resources/static/css/main.css"
+    "build-tailwind-hotreload": "npx tailwindcss -i ./src/main/resources/static/css/style.tailwind.css -o ./src/main/resources/static/css/main.css --watch"
   },
   "repository": {
     "type": "git",
