--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -23,6 +23,7 @@ pipelines:
     master:
       - step:
           name: deploy to docker registry2
+          image: atlassian/default-image:3
           script:
             - export IMAGE_NAME=premidel/automatyzacja-repo:$BITBUCKET_COMMIT
             - docker build -t $IMAGE_NAME -f ./docker/Dockerfile .
