--- a/pom.xml
+++ b/pom.xml
@@ -212,7 +212,12 @@
                         </fileset>
                     </filesets>
                 </configuration>
-
+            </plugin>
+            <!-- https://mvnrepository.com/artifact/org.sonarsource.scanner.maven/sonar-maven-plugin -->
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.9.1.2184</version>
             </plugin>
             <plugin>
                 <groupId>org.liquibase</groupId>
