--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -22,6 +22,11 @@ pipelines:
             - docker
           caches:
             - docker
+      - step:
+            name: sonarqube
+            image: maven:3.8.6-amazoncorretto-17
+            script:
+              - mvn verify sonar:sonar --file pom.xml
 
 
 
