--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -27,7 +27,8 @@ pipelines:
             image: maven:3.8.6-amazoncorretto-17
             script:
               - mvn verify sonar:sonar --file pom.xml
-
+            caches:
+              - maven
 
 
 
