--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,6 @@ spring.profiles.active=@spring.profiles.active@
 spring.liquibase.contexts=${spring.profiles.active}
 spring.messages.basename=lang.messages
 management.endpoints.web.exposure.include=*
+server.error.path=/error
 
 
