add registration test

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,10 +1,12 @@
 db.driver=org.h2.Driver
-db.url=jdbc:h2:mem:usrmgmt;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MYSQL;INIT=CREATE SCHEMA IF NOT EXISTS DUMMY;
+db.url=jdbc:h2:mem:usrmgmt;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=POSTGRESQL;INIT=CREATE SCHEMA IF NOT EXISTS DUMMY;
 #  INIT=CREATE TYPE BPCHAR AS CHARACTER NOT NULL;
 db.hibernate.dialect=org.hibernate.dialect.H2Dialect
 db.username=sa
 db.password=password
 #spring.liquibase.change-log=classpath:database/liquibase_changelogs/master.xml
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=true
+jwt.secret=secret
+jwt.validity=18000
 
