fix docker issues, redirect in admin veiw sitll dont work

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.messages.basename=lang.messages
 management.endpoints.web.exposure.include=*
 server.error.path=/error
 server.error.include-stacktrace=never
+app.locale.default=pl
 
 
