--- a/src/main/resources/application-dev_local.properties
+++ b/src/main/resources/application-dev_local.properties
@@ -4,4 +4,4 @@ db.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 db.username=courses_app_dev
 db.password=courses_app_dev
 jwt.secret=secret
-jwt.validity=18000
+jwt.validity=18000000
