add logbook logs

--- a/src/main/resources/application-dev_docker.properties
+++ b/src/main/resources/application-dev_docker.properties
@@ -5,3 +5,4 @@ db.username=courses_app_dev
 db.password=courses_app_dev
 jwt.secret=secret
 jwt.validity=18000000
+logging.level.org.zalando.logbook=trace
