--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -7,3 +7,5 @@ db.password=courses_app_dev_wrong
 jwt.secret=${JWT_AUTH_SECRET}
 #TODO: przemyśleć długość na produkcji
 jwt.validity=18000
+#TODO: prod make env
+logging.level.org.zalando.logbook=${LOGGING_LEVEL}
