--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,6 @@ management.endpoints.web.exposure.include=*
 server.error.path=/error
 server.error.include-stacktrace=never
 app.locale.default=pl
+logbook.filter.form-request-mode=parameter
 
 
