--- a/src/main/resources/application-dev_local.properties
+++ b/src/main/resources/application-dev_local.properties
@@ -6,3 +6,4 @@ db.password=courses_app_dev
 jwt.secret=secret
 jwt.validity=18000000
 logging.level.org.zalando.logbook=trace
+logging.level.tech.beetwin.stereoscopy=debug
