Start work on optimistic lock

--- a/src/main/resources/application-dev_docker.properties
+++ b/src/main/resources/application-dev_docker.properties
@@ -5,3 +5,5 @@ db.username=courses_app_dev
 db.password=courses_app_dev
 jwt.secret=secret
 jwt.validity=18000000
+jwt.secret.version=secret2
+jwt.validity.version=18000000
