--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,5 +5,7 @@ db.username=courses_app_dev
 db.password=courses_app_dev_wrong
 #TODO utworzyć zmienną środowiskową na produkcji
 jwt.secret=${JWT_AUTH_SECRET}
+jwt.secret.version=${JWT_AUTH_SECRET_VERSION}
 #TODO: przemyśleć długość na produkcji
 jwt.validity=18000
+jwt.validity.version=18000000
