--- a/src/main/resources/application-dev_local.properties
+++ b/src/main/resources/application-dev_local.properties
@@ -4,7 +4,7 @@ db.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 db.username=courses_app_dev
 db.password=courses_app_dev
 jwt.secret=secret
-jwt.validity=18000000
+jwt.auth-token.validity=18000000
 jwt.secret.version=secret2
 jwt.validity.version=18000000
 logging.level.org.zalando.logbook=trace
