--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -7,7 +7,7 @@ db.password=courses_app_dev_wrong
 jwt.secret=${JWT_AUTH_SECRET}
 jwt.secret.version=${JWT_AUTH_SECRET_VERSION}
 #TODO: przemyśleć długość na produkcji
-jwt.validity=18000
+jwt.auth-token.validity=18000
 jwt.validity.version=18000000
 #TODO: prod make env
 logging.level.org.zalando.logbook=${LOGGING_LEVEL}
