--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -8,7 +8,7 @@ db.password=password
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=true
 jwt.secret=secret
-jwt.validity=18000000
+jwt.auth-token.validity=18000000
 jwt.secret.version=secret2
 jwt.validity.version=18000000
 
