--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,10 +4,10 @@ db.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 db.username=courses_app_dev
 db.password=courses_app_dev_wrong
 #TODO utworzyć zmienną środowiskową na produkcji
-jwt.secret=${JWT_AUTH_SECRET}
-jwt.secret.version=${JWT_AUTH_SECRET_VERSION}
+jwt.secret.auth-token=${JWT_AUTH_SECRET}
 #TODO: przemyśleć długość na produkcji
-jwt.auth-token.validity=18000
-jwt.validity.version=18000000
+jwt.validity.auth-token=18000000
+jwt.version.secret=${JWT_AUTH_SECRET_VERSION}
+jwt.version.validity=18000000
 #TODO: prod make env
 logging.level.org.zalando.logbook=${LOGGING_LEVEL}
