--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -7,8 +7,8 @@ db.password=password
 #spring.liquibase.change-log=classpath:database/liquibase_changelogs/master.xml
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=true
-jwt.secret=secret
-jwt.auth-token.validity=18000000
-jwt.secret.version=secret2
-jwt.validity.version=18000000
+jwt.secret.auth-token=secret
+jwt.validity.auth-token=18000000
+jwt.version.secret=secret2
+jwt.version.validity=18000000
 
