start work on refresh token

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -9,5 +9,7 @@ jwt.secret.auth-token=${JWT_AUTH_SECRET}
 jwt.validity.auth-token=18000000
 jwt.version.secret=${JWT_AUTH_SECRET_VERSION}
 jwt.version.validity=18000000
+jwt.secret.refresh-token=${JWT_REFRESH_SECRET_VERSION}
+jwt.validity.refresh-token=18000000
 #TODO: prod make env
 logging.level.org.zalando.logbook=${LOGGING_LEVEL}
