--- a/src/main/resources/application-dev_docker.properties
+++ b/src/main/resources/application-dev_docker.properties
@@ -5,6 +5,8 @@ db.username=courses_app_dev
 db.password=courses_app_dev
 jwt.secret.auth-token=secret
 jwt.validity.auth-token=18000000
+jwt.secret.refresh-token=refresh_secret
+jwt.validity.refresh-token=18000000
 jwt.version.secret=secret2
 jwt.version.validity=18000000
 logging.level.org.zalando.logbook=trace
