--- a/src/main/resources/application-dev_local.properties
+++ b/src/main/resources/application-dev_local.properties
@@ -7,5 +7,7 @@ jwt.secret.auth-token=secret
 jwt.validity.auth-token=18000000
 jwt.version.secret=secret2
 jwt.version.validity=18000000
+jwt.secret.refresh-token=refresh_secret
+jwt.validity.refresh-token=18000000
 logging.level.org.zalando.logbook=trace
 logging.level.tech.beetwin.stereoscopy=debug
