--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -11,4 +11,6 @@ jwt.secret.auth-token=secret
 jwt.validity.auth-token=18000000
 jwt.version.secret=secret2
 jwt.version.validity=18000000
+jwt.secret.refresh-token=refresh_secret
+jwt.validity.refresh-token=18000000
 
