--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,11 +3,9 @@ db.url=jdbc:postgresql://localhost:5432/courses_db_dev
 db.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 db.username=courses_app_dev
 db.password=courses_app_dev_wrong
-#TODO utworzyć zmienną środowiskową na produkcji
+# Update env value and len for prod
 jwt.secret.auth-token=${JWT_AUTH_SECRET}
-#TODO: przemyśleć długość na produkcji
 jwt.validity.auth-token=18000000
 jwt.version.secret=${JWT_AUTH_SECRET_VERSION}
 jwt.version.validity=18000000
-#TODO: prod make env
 logging.level.org.zalando.logbook=${LOGGING_LEVEL}
