--- a/src/main/resources/application-dev_local.properties
+++ b/src/main/resources/application-dev_local.properties
@@ -1,8 +1,8 @@
 db.driver=org.postgresql.Driver
-db.url=jdbc:postgresql://localhost:5432/courses_db_dev
+db.url=jdbc:postgresql://localhost:5432/template_db_dev
 db.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-db.username=courses_app_dev
-db.password=courses_app_dev
+db.username=template_app_dev
+db.password=template_app_dev
 jwt.secret.auth-token=secret
 jwt.validity.auth-token=18000000
 jwt.version.secret=secret2
