--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,7 +5,7 @@ LABEL APPLICATION="Template App"
 
 WORKDIR /usr/src/app
 COPY . /usr/src/app
-RUN mvn clean package -P dev_docker -f /usr/src/app/pom.xml -X
+RUN mvn clean package -P dev_docker -f /usr/src/app/pom.xml
 
 FROM tomcat:9.0.68-jdk17-corretto-al2
 ARG TOMCAT_FILE_PATH=/docker/tomcat
